force-app/main/default/objects/Airports__x/Airports__x.object-meta.xml
<CustomObject>
    <description>Airports</description>
    <externalDataSource>odata</externalDataSource>
    <externalName>Airports</externalName>
    <label>Airports</label>
    <pluralLabel>Airports</pluralLabel>
</CustomObject>