force-app/main/default/objects/Airports__x/fields/IataCode__c.field-meta.xml
<CustomField>
    <fullName>IataCode__c</fullName>
    <description>IataCode</description>
    <externalDeveloperName>IataCode</externalDeveloperName>
    <label>IataCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>