force-app/main/default/objects/Airports__x/fields/IcaoCode__c.field-meta.xml
<CustomField>
    <fullName>IcaoCode__c</fullName>
    <description>IcaoCode</description>
    <externalDeveloperName>IcaoCode</externalDeveloperName>
    <label>IcaoCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>