force-app/main/default/objects/Airports__x/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location</description>
    <externalDeveloperName>Location</externalDeveloperName>
    <label>Location</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>